--- a/css/common.css
+++ b/css/common.css
@@ -19,11 +19,11 @@ a {text-decoration: none; color: inherit}
   width: calc(100% - 100px);
   margin: 0 auto
 }
-.scrollLock { overflow: hidden; }
+.scrollLock {overflow: hidden; }
 section{margin-bottom: 50px;}
 .sec-header{
   display: flex; align-items: center; 
-  margin-bottom: 30px; margin-top: 100px;
+  margin: 100px 0 30px;
 }
 /* header - S */
 header{
@@ -178,7 +178,6 @@ header .inner{display: flex; justify-content: space-between;}
   background: center / contain no-repeat url(/portfolio04/img/footer_icon01.png);
   position: absolute; right: 10%; top: -140%;
 }
-
 .footer .f-top .f-top-notice{
   display: flex; justify-content: space-between; 
   width: 60%;
@@ -210,7 +209,10 @@ header .inner{display: flex; justify-content: space-between;}
 } 
 .footer .f-bottom .f-logo{margin-right: 50px;}
 .footer .f-bottom .f-info{font-size: 18px; font-weight: 500;}
-.footer .f-bottom .f-info address{color: #5c7db0; margin-bottom: 15px;}
+.footer .f-bottom .f-info address{
+  margin-bottom: 15px;
+  color: #5c7db0; 
+}
 .footer .f-bottom .f-info em{
   display: block;
   margin-bottom: 15px; 
@@ -251,7 +253,6 @@ header .inner{display: flex; justify-content: space-between;}
   .footer .f-bottom .f-logo{margin: 0 0 50px;}
   /* footer - E */  
 }
-
 
 
 @media all and (max-width:640px) {
